--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,30 @@
 
     <groupId>com.jimmy</groupId>
     <artifactId>plugin</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>excel</module>
+    </modules>
 
-
+ <dependencyManagement>
+     <dependencies>
+         <dependency>
+             <groupId>commons-lang</groupId>
+             <artifactId>commons-lang</artifactId>
+             <version>2.6</version>
+         </dependency>
+         <dependency>
+             <groupId>org.projectlombok</groupId>
+             <artifactId>lombok</artifactId>
+             <version>1.16.20</version>
+             <scope>provided</scope>
+         </dependency>
+         <dependency>
+             <groupId>org.apache.poi</groupId>
+             <artifactId>poi-ooxml</artifactId>
+             <version>3.9</version>
+         </dependency>
+     </dependencies>
+ </dependencyManagement>
 </project>
