--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,12 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>excel</module>
+        <module>common</module>
     </modules>
 
  <dependencyManagement>
      <dependencies>
+
          <dependency>
              <groupId>commons-lang</groupId>
              <artifactId>commons-lang</artifactId>
@@ -29,6 +31,21 @@
              <groupId>org.apache.poi</groupId>
              <artifactId>poi-ooxml</artifactId>
              <version>3.9</version>
+         </dependency>
+         <dependency>
+             <groupId>org.apache.httpcomponents</groupId>
+             <artifactId>httpclient</artifactId>
+             <version>4.5.7</version>
+         </dependency>
+         <dependency>
+             <groupId>commons-beanutils</groupId>
+             <artifactId>commons-beanutils</artifactId>
+             <version>1.9.3</version>
+         </dependency>
+         <dependency>
+             <groupId>com.alibaba</groupId>
+             <artifactId>fastjson</artifactId>
+             <version>1.1.40</version>
          </dependency>
      </dependencies>
  </dependencyManagement>
